--- a/package.json
+++ b/package.json
@@ -13,20 +13,36 @@
     "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75% --coverage"
   },
   "dependencies": {
-    "@deskpro/app-sdk": "^1.2",
+    "@atlaskit/adf-utils": "14.4.0",
+    "@deskpro/app-sdk": "^1.2.8",
     "@heroicons/react": "1.0.6",
+    "date-fns": "^2.28.0",
+    "html-truncate": "^1.2.2",
+    "iframe-resizer": "4.3.2",
+    "javascript-time-ago": "^2.3.13",
+    "js-cache": "^1.0.3",
+    "lodash": "^4.17.21",
     "polished": "^4.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-intl": "^5.24.6",
+    "react-time-ago": "^7.1.9",
+    "styled-components": "^5.3.5",
+    "ts-pattern": "3.3.5",
+    "use-debounce": "7.0.1",
+    "yup": "0.31.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@types/html-truncate": "^1.2.2",
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.23",
     "@types/testing-library__jest-dom": "^5.14.2",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "5.6.0",
     "@typescript-eslint/parser": "5.6.0",
     "@vitejs/plugin-react": "^1.0.7",
