--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "@deskpro-apps/jira-data-centre",
   "title": "Jira Data Centre",
   "description": "View Jira issues linked with Deskpro tickets to streamline communication with users",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scope": "agent",
   "isSingleInstall": true,
   "hasDevMode": true,
@@ -27,10 +27,10 @@
     }
   },
   "settings": {
-    "domain": {
-      "title": "Domain Prefix",
-      "description": "E.g. \"mycompany\" if your domain is \"https://mycompany.atlassian.net\"",
-      "validationPattern": "^[a-zA-Z0-9](?:[a-zA-Z0-9_-]*[a-zA-Z0-9])?$",
+    "instance_url": {
+      "title": "Jira Data Center Instance URL",
+      "description": "Enter the URL of your Jira Data Center instance, or \"https://<my_company>.atlassian.net\"",
+      "validationPattern": "^https?:\\/\\/.+\\..+\\w$",
       "type": "string",
       "isRequired": true,
       "isBackendOnly": false,
