--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0 --ext ts,tsx ./src",
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75%",
-    "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75% --coverage"
+    "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75% --coverage",
+    "bumpManifestVer": "node ./bin/bumpManifestVer.js"
   },
   "dependencies": {
     "@atlaskit/adf-utils": "14.4.0",
     "@deskpro/app-sdk": "^1.2.8",
+    "@deskpro/deskpro-ui": "^6.7.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "1.0.6",
     "date-fns": "^2.28.0",
+    "flatpickr": "^4.6.13",
+    "formik": "^2.2.9",
     "html-truncate": "^1.2.2",
     "iframe-resizer": "4.3.2",
     "javascript-time-ago": "^2.3.13",
@@ -27,7 +34,9 @@
     "react-dom": "^17.0.2",
     "react-intl": "^5.24.6",
     "react-time-ago": "^7.1.9",
+    "simplebar": "^6.2.5",
     "styled-components": "^5.3.5",
+    "tippy.js": "^6.3.7",
     "ts-pattern": "3.3.5",
     "use-debounce": "7.0.1",
     "yup": "0.31.1"
@@ -52,6 +61,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "jest": "^27.4.7",
+    "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
     "rollup-plugin-copy": "3.4.0",
     "slugify": "^1.6.5",
