--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@atlaskit/adf-utils": "14.4.0",
     "@deskpro/app-sdk": "^1.2.8",
-    "@deskpro/deskpro-ui": "^6.7.0",
+    "@deskpro/deskpro-ui": "4.7.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
