--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
   "isSingleInstall": true,
   "hasDevMode": true,
   "serveUrl": "https://apps-cdn.deskpro-service.com/__name__/__version__",
+  "appStoreUrl": "https://www.deskpro.com/product-embed/apps/jira-data-center",
   "targets": [
     {
       "target": "ticket_sidebar",
