--- a/package.json
+++ b/package.json
@@ -10,64 +10,76 @@
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0 --ext ts,tsx ./src",
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75%",
+    "test:watch": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75% --watch",
     "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75% --coverage",
     "bumpManifestVer": "node ./bin/bumpManifestVer.js"
   },
   "dependencies": {
     "@atlaskit/adf-utils": "14.4.0",
-    "@deskpro/app-sdk": "^1.2.8",
-    "@deskpro/deskpro-ui": "4.7.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@deskpro/app-sdk": "^3.0.14",
+    "@deskpro/deskpro-ui": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "1.0.6",
-    "date-fns": "^2.28.0",
+    "@tanstack/react-query": "^4.36.1",
+    "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
     "formik": "^2.2.9",
     "html-truncate": "^1.2.2",
-    "iframe-resizer": "4.3.2",
-    "javascript-time-ago": "^2.3.13",
+    "iframe-resizer": "^4.3.9",
+    "javascript-time-ago": "^2.5.9",
     "js-cache": "^1.0.3",
     "lodash": "^4.17.21",
     "polished": "^4.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-intl": "^5.24.6",
-    "react-time-ago": "^7.1.9",
+    "react-time-ago": "^7.2.1",
     "simplebar": "^6.2.5",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.11",
     "tippy.js": "^6.3.7",
-    "ts-pattern": "3.3.5",
-    "use-debounce": "7.0.1",
-    "yup": "0.31.1"
+    "ts-pattern": "^4.3.0",
+    "use-debounce": "^9.0.4",
+    "yup": "^0.31.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@jest/globals": "^29.7.0",
+    "@swc/core": "^1.3.102",
+    "@swc/helpers": "^0.5.3",
+    "@swc/jest": "^0.2.29",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/html-truncate": "^1.2.2",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.191",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.23",
-    "@types/testing-library__jest-dom": "^5.14.2",
     "@types/yup": "^0.29.11",
-    "@typescript-eslint/eslint-plugin": "5.6.0",
-    "@typescript-eslint/parser": "5.6.0",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.86",
+    "@vitejs/plugin-react": "^1.3.2",
     "adm-zip": "^0.5.9",
     "cross-env": "7.0.3",
     "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.8.7",
+    "intersection-observer": "^0.12.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "node-fetch": "^3.3.0",
+    "prettier": "2.8.7",
+    "react-resize-observer": "^1.1.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-copy": "3.4.0",
     "slugify": "^1.6.5",
-    "styled-components": "^5.3.5",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4",
+    "ts-jest": "^29.1.1",
+    "typescript": "^4.9.5",
     "vite": "^2.7.2"
   }
 }
