--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-intl": "^5.24.6",
+    "react-router-dom": "^6.21.1",
     "react-time-ago": "^7.2.1",
     "simplebar": "^6.2.5",
     "styled-components": "^5.3.11",
