The dynamic user search has been implemented

--- a/manifest.json
+++ b/manifest.json
@@ -51,7 +51,7 @@
     "verify_settings": {
       "title": "",
       "type": "app_embedded",
-      "options": { "entrypoint": "#/admin/verify_settings" },
+      "options": { "entrypoint": "#/admin/verify_settings", "height": "30px" },
       "isRequired": false,
       "isBackendOnly": false,
       "order": 40
