--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+.idea
 node_modules
 .DS_Store
 dist
+build
 dist-ssr
 *.local
-.idea
-build
-yarn-error.log
 /coverage
 .pnpm-store
+
+# Sentry Config File
+.env.sentry-build-plugin
