--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "1.0.6",
+    "@sentry/react": "^9.22.0",
+    "@sentry/vite-plugin": "^3.5.0",
     "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
@@ -32,7 +34,6 @@
     "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.1.2",
     "react-intl": "^5.25.1",
     "react-router-dom": "^6.28.1",
     "react-time-ago": "^7.3.3",
