--- a/manifest.json
+++ b/manifest.json
@@ -86,7 +86,12 @@
       {
         "url": "__instance_url__/rest/api/.*",
         "methods": ["GET", "POST", "PUT", "DELETE"],
-        "timeout": 30
+        "timeout": 30,
+        "settingsInjection": {
+          "api_key": {
+            "header": ["Authorization"]
+          }
+        }
       }
     ]
   }
